@startuml
left to right direction

title Prototype Pattern

class Human {
  +name: string
}

class Prototype {
  +primitive: any
  +component: Human
  +circularReference: ComponentWithBackReference
  -cloneObject()
  +deepClone()
  +shallowClone()
}

class ComponentWithBackReference {
  +prototype
}

Prototype --> ComponentWithBackReference
ComponentWithBackReference --> Prototype

Prototype --> Human

@enduml